assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Poiret+One&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: montserrat, sans-serif;
    font-weight: 300px;
    color: #353838;
}

/* headings and logo */

h1,
h2 {
    font-family: poiret one, cursive;
    letter-spacing: 1px;
    color: #4d4044;
}

#logo {
    float: left;
    font-size: 300%;
    width: 57%;
    margin-left: 20px;
}

/* navigation links */
#main-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#menu {
    font-size: 20px;
    letter-spacing: 1px;
    justify-content: space-between;
    display: flex;
    list-style-type: none;
    width: 40%;
    align-items: center;
}

header {
    position: fixed;
    z-index: 99;
    top: 0;
    width: 100%;
    line-height: 75px;
    background-color: rgba(255, 255, 2555, 0.9)
}

#menu a {
    text-decoration: none;
    color: #4d4044
}

#menu a:hover {
    border-bottom: 1px solid peachpuff;
    border-top: 1px solid peachpuff;
    background-color: rgba(224, 159, 142, 0.1);
}

.active {
    background-color: rgba(224, 159, 142, 0.1);
}

#logo,
#menu {
    line-height: 75px;
}

/* dropdown menu idea from https://www.w3schools.com/Css/css_dropdowns.asp */

.dropbtn {
    background-color: rgba (224, 159, 142, 0.1);
    border-bottom: 1px solid peachpuff;
    border-top: 1px solid peachpuff;
    color: white;
    padding: 1px;
    font-size: 20px;
    border: none;
    cursor: pointer;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: white;
    text-align: center;
    min-width: 135px;
    z-index: 1;
    padding: 1px;
}

.dropdown-content a {
    text-decoration: none;
    display: block;
}

.dropdown:hover .dropdown-content {
    display: block;
}

/* hero image */

#hero-image {
    height: 600px;
    width: 100%;
    background: url('../images/hero-image-1.jpeg') no-repeat center center;
    background-size: cover;
    padding-top: 75px;
}

/* cover text on front page */

#outer {
    position: relative;
    padding-top: 75px;
}

#cover-text h2 {
    color: #4d4044;
    text-shadow: #353838;
    font-family: poiret one, cursive;
}

/*
#cover-text-outer {
    width: 400px;
    height: 100%;
    overflow: hidden;
}
*/

#cover-text {
    font-size: 110%;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;

    background-color: rgba(255, 218, 185, 0.6);
    width: 400px;
    height: 100px;
    padding-top: 50px;
    padding-left: 10px;

    position: absolute;
    top: 250px;
    left: 110px;
    border-radius: 50%;

    /* animation zoom effect on loading the page */
    animation-name: cover-text-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
}

/* zoom effect for cover-text */
@keyframes cover-text-zoom {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(1.1);
    }
}

/* about us, our aim */

#our-passion {
    height: 300px;
    padding: 40px 90px;
    text-align: center;
    letter-spacing: 2px;

}

#our-passion h1 {
    color: #4d4044;
    text-shadow: #353838;
    font-family: poiret one, cursive;
    font-size: 300%;
    padding-top: 40px;
    letter-spacing: 2px;
}

#our-passion p {
    padding-top: 40px;
}

/* shell star image above waves - NEED TO FIX THIS! */

#shell-star-image {
    height: 600px;
    width: 100%;
    background: url('../images/life-style.jpeg') no-repeat center bottom;
    background-size: cover;
    overflow: hidden;
}

/* waves animation; idea from https://freefrontend.com/css-hero-effects/ and snippet started from; https://codepen.io/KrzysiekF/pen/oNNLwZq */
/*
.ocean {
    position: relative;
  
}

:root {
    --color: rgba(0, 206, 209, 0.2)
    ;
  }

.waves {
    position: absolute;
    top: -200;
    bottom: 0;
    left: 0;
    right: 0;
    height: 200px;
    background-color: var(--color);
    box-shadow: inset 0 0 50 rgba(10, 57, 132, 0.2);
    transition: 500ms;
  }
  
  .waves::before,
  .waves::after {
    content: '';
    position: absolute;
    width: 300vw;
    height: 300vw;
    top: -65vw;
    left: 50%;
    transform: translate(-50%, -75%);
  }
  
  .waves::before {
    border-radius: 44%;
    background: rgba(10, 57, 132, 0.1);
    animation: waves 8s linear infinite;
  }
  
  .waves::after {
    border-radius: 44%;
    background: rgba(10, 57, 132, 0.1);
    animation: waves 15s linear infinite;
  }
  
  @keyframes waves {
    0% {
      transform: translate(-50%, -75%) rotate(0deg);
    }
    
    100% {
      transform: translate(-50%, -75%) rotate(360deg);
    }
  }
  */

/* style destination galleries */

/*  style carousel to destination galleries; idea from https://freehtmldesigns.com/css-carousels/ 
https://codepen.io/blueacornfed/pen/qdRddr  */

.carousel_wrapper {
    position: relative;
    width: 320px;
    margin: 0 auto 0 auto;
    perspective: 1000px;
}

.carousel {
    position: absolute;
    width: 100%;
    height: 100%;
    transform-style: preserve-3d;
    transform: rotateY(-360deg) translateZ(-412px);
    /* add reverse transformation from the slides */
    animation: swirl 40s steps(10000, end) infinite;
    /* run `swirl` animation (defined at end of CSS) infitely, with animation lasting 40 seconds, and 10,000 steps between the FROM and TO values in the animation for a smooth rotation */
}

.slide {
    position: absolute;
    top: 10px;
    left: 10px;
    width: 300px;
    height: 187px;
}

.slide img {
    width: 280px;
    height: 175px;
    border: 3px inset rgb(255, 218, 185);
    /* border-radius: 100%; */
    box-shadow: 0 0 15px 3px rgb(255 218 185);
}

/*
  9 Slides total: 360 Degrees (full circle) --> 360/9 = 40 --> our increment for rotation
  
  Some math. Consider how the carousel will be set up. It's going to be a 3D circle, like an orbit. The orientation will be such that it would be like setting a ring down on a table, then bending down and looking at the ring head on from the edge of the table. The main "front" image will be entirely front-facing. The other images will be rotated slightly to make a full circle. You could sketch this out in 2D from a bird's eye view, and you'd end up with a picture like the following:
    
  Each triangle/piece would be a slide, hence 9 pieces. That being said, let's do some calculations, but we'll use the dimensions of our elements rather than those in the picture.
  
  So, we're rotating all the slides in 40º increments relative to each other, because 360º makes a full circle, and we have 9 elements: 360/9 = 40
  
  In the picture above, we want to find the radius of the circle (which isn't exactly a circle because it's made up of triangles). So we can cut each triangle in half and solve for `r` (radius). We can solve for `r` using some geometry and our own elements' dimensions. 
  
  The width of the slides is 300px. We're going to split those triangles in half and use the TANGENT function in geometry/trigonemty to solve for `r`. And since we're splitting each of the 9 triangles (the slides) in half for this, we need to account for the fact that our key angle is now going to be 20º and not 40º. We can solve for `r` by taking our smaller triangles' width (150px) and dividing by the tangent of 20º (in degrees, not radians). So:
  
              150
     r =  -----------
            tan(20º)
  
  Here's a screenshot of me doing the calculations in JavaScript, right in the browser console!
  
  Math things: https://cl.ly/image/1t0j1V2Y2l2Z
  
  So, `r` is (about) 412px long! This means we need to TRANSLATE the slides in the Z 3-dimensional plane by 412px. This should be done AFTER the rotateY transformation.
  */

.slide.one {
    transform: rotateY(0deg) translateZ(412px);
}

.slide.two {
    transform: rotateY(40deg) translateZ(412px);
}

.slide.three {
    transform: rotateY(80deg) translateZ(412px);
}

.slide.four {
    transform: rotateY(120deg) translateZ(412px);
}

.slide.five {
    transform: rotateY(160deg) translateZ(412px);
}

.slide.six {
    transform: rotateY(200deg) translateZ(412px);
}

.slide.seven {
    transform: rotateY(240deg) translateZ(412px);
}

.slide.eight {
    transform: rotateY(280deg) translateZ(412px);
}

.slide.nine {
    transform: rotateY(320deg) translateZ(412px);
}

.slide.ten {
    transform: rotateY(320deg) translateZ(412px);
}

/*
  CSS3 ANIMATION
  -------------------
  Simply rotates the carousel around the Y axis by using rotateY and starting at initial value, -360º, and going to final value 0º, then resetting.
  */

@keyframes swirl {
    from {
        transform: rotateY(-360deg);
    }

    to {
        transform: rotateY(0deg);
    }
}

/* Destination pages layout design */

#destination-top {
    height: 600px;
    background-color: peachpuff;
}

#left-side {
    width: 20%;
    float: left;
    display: grid;
    place-items: center;
    padding-top: 205px;
    font-size: 200%;
}

#right-side {
    width: 80%;
    float: right;
    padding-top: 100px;
}

#destination-bottom {
    height: 800px;
    background-color: peachpuff;
}

#bottom-left {
    width: 55%;
    float: left;
    height: 800px;
    overflow: scroll;
}

#bottom-right {
    width: 45%;
    float: right;
    overflow: hidden;
    text-align: center;
}

#bottom-right h2,
#bottom-right p {
    padding: 0 30px
}

#bottom-right h2 {
    font-size: 180%;
}

#bottom-right p {
    font-size: 110%;
}

/* Enquire Form */

.form-section {
    height: 900px;
    background: url('../images/hero-image.jpeg') no-repeat center center;
    background-size: cover;
    clear: left;
}

.signup-form {
    margin: 100px 0% 0 0;
    color: #fff;
    background-color: rgba(53, 56, 56, 0.6);
    max-width: 500px;
    position: absolute;
    left: 55%;
    padding: 30px;
}

.signup-form h2 {
    color: peachpuff;
    margin-bottom: 20px;
}

.enquire-button {
    font-size: 100%;
    color: peachpuff;
    display: block;
    text-align: center;
    background-color: #4d4044;
    border-radius: 20px;
    padding: 10px 27px;
}

.enquire-button:hover {
    background-color: peachpuff;
    color: #4d4044;
    font-weight: bolder;
}

.text-input {
    background: transparent;
    color: peachpuff;
    width: 30%;
    height: 25px;
    margin: 5px 0 15px;
    border: 1px solid peachpuff;
    border-radius: 2px;
}

.text-input:hover {
    border-color: whitesmoke;
}

legend {
    height: 25px;
    margin-bottom: 1px;
    font-style: italic;
}

.radio-button {
    height: 15px;
    margin: 5px 0 15px;
    accent-color: peachpuff;
}


/* Footer */

footer {
    background-color: peachpuff;
}

footer h3 {
    height: 30px;
    text-align: center;
    font-weight: bold;
    color: #353838;
    letter-spacing: 3px;
}

.social-networks {
    height: 50px;
    text-align: center;
    background-color: peachpuff;
}

.social-networks a {
    text-decoration: none;
}

.social-networks>li {
    display: inline;

}

.social-networks em {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #4d4044;
}

footer p {
    height: 10px;
    text-align: center;
    font-weight: bold;
    font-size: small;
    letter-spacing: 2px;
}

/* Media queries */

/* for larger to medium screens size from 1200px wide and down */
@media screen and (max-width: 950px) {
    #menu {
        clear: left;
        float: left;
        margin-left: 30px;
        margin-bottom: 20px;
        line-height: 25px;
    }
}

